# CeleX5-MIPI-Lite

./: README.md
CeleX/: CeleX.vcxproj  Makefile
CeleX/base/: xbase.cpp  xbase.h
CeleX/configproc/: hhsequencemgr.cpp  hhsequencemgr.h
CeleX/eventproc/: celex4.cpp  celex5.cpp
CeleX/include/celex4/: celex4.h
CeleX/include/celex5/: celex5.h
GetSensorData/: CMakeLists.txt  GetSensorData.cpp  GetSensorData.sln  GetSensorData.vcxproj
GetSensorData/lib/Windows/x64/release/: CeleX.lib
